# rust3sprint

./: .gitignore  API_SCHEMA.md  Cargo.toml  README.md
blog-cli/: Cargo.toml  settings.json
blog-cli/src/: cli.rs  config.rs  main.rs
blog-cli/src/client/: mod.rs  request.rs  tools.rs
blog-client/: Cargo.toml  build.rs
blog-client/src/: config.rs  error.rs  lib.rs  models.rs  tools.rs
blog-client/src/clients/: grpc_client.rs  http_client.rs  mod.rs  models.rs  tools.rs  traits.rs
blog-server/: Cargo.toml  build.rs
blog-server/migrations/: 20260215095401_create_users.sql  20260215095405_create_posts.sql  20260222151418_enlarge_password_hash.sql
blog-server/proto/: blog.proto
blog-server/src/: main.rs  server.rs  settings.rs
blog-server/src/application/: auth_service.rs  blog_service.rs  mod.rs
blog-server/src/data/: macros.rs  mod.rs  post_repo.rs  user_repo.rs
blog-server/src/domain/: error.rs  macros.rs  mod.rs  models.rs  post.rs  types.rs  user.rs  validators.rs
blog-server/src/errors/: domain.rs  grpc.rs  http.rs  jws.rs  macros.rs  mod.rs  repo.rs
blog-server/src/infrastructure/: config.rs  database.rs  jwt.rs  logging.rs  mod.rs
blog-server/src/presentation/: grpc_service.rs  http_handlers.rs  mod.rs  tools.rs
blog-server/src/presentation/api_handlers/: mod.rs  protected.rs  public.rs  tools.rs
blog-server/src/presentation/grpc/: api_services.rs  mod.rs  tools.rs
blog-server/src/presentation/mapping/: mod.rs  post.rs  user.rs
blog-server/src/presentation/middleware/: jwt.rs  mod.rs
blog-wasm/: Cargo.toml  index.html  index.scss  trunk.toml
blog-wasm/src/: app.rs  lib.rs  main.rs  routes.rs
blog-wasm/src/components/: footer.rs  mod.rs  nav.rs
blog-wasm/src/domain/: errors.rs  mod.rs  types.rs
blog-wasm/src/pages/: auth.rs  errors.rs  home.rs  mod.rs  posts.rs
blog-wasm/src/services/: clients.rs  mod.rs  models.rs  tools.rs
blog-wasm/src/state/: blog_state.rs  mod.rs  models.rs
commons/: Cargo.toml
commons/src/: datetime.rs  lib.rs
proto-crate/: Cargo.toml  build.rs
proto-crate/proto/: blog.proto
proto-crate/src/: lib.rs
