[workspace]
members = ["blog-cli", "blog-client", "blog-server", "blog-wasm"]
resolver = "2"

[workspace.dependencies]
actix-web = "4"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
prost = "0.14"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
tonic = "0.14"
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
