[workspace]
members = ["blog-cli", "blog-client", "blog-server", "blog-wasm", "commons", "proto-crate"]
resolver = "3"

[profile.release]
panic = "abort"
opt-level = "z"

[workspace.dependencies]
actix-web = "4"
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
dotenvy = "0.15"
prost = "0.14"
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
tonic = "0.14"
tonic-prost = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }

[workspace.lints.rust]
deprecated = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = "warn"
redundant_lifetimes = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"
unused_must_use = "warn"
