[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[lints]
workspace = true

[dependencies]
proto-crate = { path = "../proto-crate" }

reqwest = { version = "0.13", features = ["json"] }

# Workspace
serde.workspace = true
tonic.workspace = true
thiserror.workspace = true
