[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[lints]
workspace = true

[dependencies]
#actix-web-httpauth = "0.8"
actix-cors = "0.7"
#argon2 = { version = "0.5", features = ["std"] }
#jsonwebtoken = "10"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "uuid", "runtime-tokio-rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }

proto-crate = {path = "../proto-crate"}

# Workspace
anyhow.workspace = true
actix-web.workspace = true
chrono.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
