[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[lints]
workspace = true

[dependencies]
#actix-web-httpauth = "0.8"
actix-cors = "0.7"
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
sqlx = { version = "0.8", features = ["postgres", "uuid", "runtime-tokio-rustls", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }

proto-crate = {path = "../proto-crate"}

# Workspace
anyhow.workspace = true
actix-web.workspace = true
chrono.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
